--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,12 @@ _minted-*
 # Python
 __pycache__
 .venv
-test.py
 
 # Dataset
 img
-imgcorrupted
 imgfake
-output
-imgtest
+temp
+imgcorrupted
 
 # Results
 results.json
